added a first draft feature that, on button press, will find the client's public IP address

--- a/app/package.json
+++ b/app/package.json
@@ -5,9 +5,15 @@
   "author": "First Last <first.last@example.com>",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "babel client/script.js -d vanJS"
   },
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.14.3",
+    "@babel/core": "^7.14.3",
+    "@babel/preset-react": "^7.13.13"
   }
 }
