--- a/app/dockerfile
+++ b/app/dockerfile
@@ -1,7 +1,7 @@
 FROM node:14
 WORKDIR /home/wallace/myapp
 COPY package*.json ./
-RUN npm install && apt update && apt install -y traceroute
+RUN npm install && apt update && apt install -y nmap && apt install -y traceroute
 COPY . .
 EXPOSE 3000
 CMD ["node", "server.js"]
