--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "babel client/script.js -d vanJS"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg": "^8.6.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.3",
