--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
-  "name": "docker_web_app",
-  "version": "1.0.0",
-  "license": "MIT",
-  "description": "Web App Prototype",
-  "author": "First Last <first.last@example.com>",
-  "repository": "https://github.com/MichaelT233/web",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "build": "babel client/script.js -d vanJS"
-  },
-  "dependencies": {
-    "express": "^4.17.1",
-    "pg": "^8.7.1"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.14.8",
-    "@babel/core": "^7.15.0",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/preset-typescript": "^7.15.0"
-  }
+    "name": "docker_web_app",
+    "version": "1.0.0",
+    "license": "MIT",
+    "description": "Web App Prototype",
+    "author": "First Last <first.last@example.com>",
+    "repository": "https://github.com/MichaelT233/web",
+    "main": "server.js",
+    "scripts": {
+        "start": "node server.js"
+    },
+    "dependencies": {
+        "express": "^4.17.1",
+        "pg": "^8.7.1"
+    },
+    "devDependencies": {
+        "@babel/cli": "^7.14.8",
+        "@babel/core": "^7.15.0",
+        "@babel/preset-react": "^7.14.5",
+        "@babel/preset-typescript": "^7.15.0"
+    }
 }
