--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@babel/cli": "^7.14.8",
         "@babel/core": "^7.15.0",
         "@babel/preset-react": "^7.14.5",
-        "@babel/preset-typescript": "^7.15.0"
+        "@babel/preset-typescript": "^7.15.0",
+        "sass": "^1.38.2"
     }
 }
