--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "repository": "https://github.com/MichaelT233/web",
     "main": "server.js",
     "scripts": {
-        "start": "node server.js"
+        "start": "node main.js"
     },
     "dependencies": {
         "express": "^4.17.1",
