--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "description": "Web App Prototype",
     "author": "First Last <first.last@example.com>",
     "repository": "https://github.com/MichaelT233/web",
-    "main": "server.js",
+    "main": "main.js",
     "scripts": {
         "start": "node main.js"
     },
@@ -18,6 +18,8 @@
         "@babel/core": "^7.15.0",
         "@babel/preset-react": "^7.14.5",
         "@babel/preset-typescript": "^7.15.0",
-        "sass": "^1.38.2"
+        "sass": "^1.38.2",
+        "webpack": "^5.51.1",
+        "webpack-cli": "^4.8.0"
     }
 }
