--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "docker_web_app",
+    "name": "docker_web_application",
     "version": "1.0.0",
     "license": "MIT",
-    "description": "Web App Prototype",
-    "author": "First Last <first.last@example.com>",
+    "description": "Web Application Prototype",
+    "author": "Michael T <first.last@example.com>",
     "repository": "https://github.com/MichaelT233/web",
     "main": "main.js",
     "scripts": {
@@ -14,12 +14,12 @@
         "pg": "^8.7.1"
     },
     "devDependencies": {
-        "@babel/cli": "^7.14.8",
-        "@babel/core": "^7.15.0",
+        "@babel/cli": "^7.15.4",
+        "@babel/core": "^7.15.5",
         "@babel/preset-react": "^7.14.5",
         "@babel/preset-typescript": "^7.15.0",
-        "sass": "^1.38.2",
-        "webpack": "^5.51.1",
+        "sass": "^1.39.2",
+        "webpack": "^5.52.1",
         "webpack-cli": "^4.8.0"
     }
 }
