web server config

--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -18,9 +18,9 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
 
-    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-    #                  '$status $body_bytes_sent "$http_referer" '
-    #                  '"$http_user_agent" "$http_x_forwarded_for"';
+    #log_format  main  "$remote_addr - $remote_user [$time_local] "$request" "
+    #                  "$status $body_bytes_sent "$http_referer" "
+    #                  ""$http_user_agent" "$http_x_forwarded_for"";
 
     #access_log  logs/access.log  main;
 
@@ -42,7 +42,26 @@ http {
 
         location / {
             root   /usr/share/nginx/html;
-            index  home.html;
+        }
+
+        location /product {
+            root   /usr/share/nginx/html;
+        }
+
+        location /checkout {
+            root   /usr/share/nginx/html;
+        }
+
+        location /checkout-final {
+            root   /usr/share/nginx/html;
+        }
+
+        location /cart {
+            root   /usr/share/nginx/html;
+        }
+
+        location /about {
+            root   /usr/share/nginx/html;
         }
 
         location /product-api/ {
@@ -78,8 +97,8 @@ http {
         #    include        fastcgi_params;
         #}
 
-        # deny access to .htaccess files, if Apache's document root
-        # concurs with nginx's one
+        # deny access to .htaccess files, if Apache"s document root
+        # concurs with nginx"s one
         #
         #location ~ /\.ht {
         #    deny  all;
