--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
-/*/node_modules
 /*/*/node_modules
-/*/main.js
+/*/*/*/node_modules
 /*/*/main.js
-/*/main.js
-/*/*/*.js
+/*/*/*/*.js
 /server/public/js
