--- a/product-service/client/package.json
+++ b/product-service/client/package.json
@@ -2,19 +2,15 @@
     "name": "product-service-client",
     "version": "1.0.0",
     "dependencies": {
-        "@reduxjs/toolkit": "^1.8.1",
         "axios": "^0.26.1",
         "react": "^18.0.0",
-        "react-query": "^3.34.19",
-        "react-redux": "^7.2.8"
+        "react-query": "^3.35.0"
     },
     "devDependencies": {
         "@types/axios": "^0.14.0",
-        "@types/node": "^17.0.21",
-        "@types/react": "^18.0.4",
+        "@types/node": "^17.0.25",
+        "@types/react": "^18.0.5",
         "@types/react-query": "^1.2.9",
-        "@types/react-redux": "^7.1.24",
-        "@types/redux": "^3.6.0",
         "typescript": "^4.6.2"
     }
 }
