--- a/core/client/package.json
+++ b/core/client/package.json
@@ -5,16 +5,14 @@
         "@types/node": "^17.0.23",
         "@types/react": "^17.0.43",
         "@types/react-dom": "^17.0.14",
-        "@types/react-redux": "^7.1.24",
-        "@types/redux": "^3.6.0",
+        "@types/react-router-dom": "^5.3.3",
         "typescript": "^4.6.2",
         "webpack": "^5.71.0",
         "webpack-cli": "^4.9.2"
     },
     "dependencies": {
-        "@reduxjs/toolkit": "^1.8.1",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
-        "react-redux": "^7.2.8"
+        "react-router-dom": "^6.3.0"
     }
 }
