--- a/product-service/server/tsconfig.json
+++ b/product-service/server/tsconfig.json
@@ -3,7 +3,7 @@
       "module": "commonjs",
       "removeComments": true,
       "preserveConstEnums": true,
-      "sourceMap": true,
+      "sourceMap": false,
     },
     "files": [
       "./api/restServer.ts",
