product server component test

--- a/core/server/gateway/nginx.conf
+++ b/core/server/gateway/nginx.conf
@@ -44,8 +44,8 @@ http {
             root   /usr/share/nginx/html;
         }
 
-        location /product-api/ {
-            proxy_pass http://product-api/;  
+        location /product/ {
+            proxy_pass http://product-server/;  
         }
 
         #location /cart-api/ {
