--- a/client/package.json
+++ b/client/package.json
@@ -2,17 +2,20 @@
     "name": "client-core",
     "version": "1.0.0",
     "devDependencies": {
+        "@types/axios": "^0.14.0",
         "@types/node": "^17.0.23",
         "@types/react": "^17.0.43",
         "@types/react-dom": "^17.0.14",
-        "@types/react-router-dom": "^5.3.3",
+        "@types/react-query": "^1.2.9",
         "typescript": "^4.6.2",
         "webpack": "^5.71.0",
         "webpack-cli": "^4.9.2"
     },
     "dependencies": {
+        "axios": "^0.26.1",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
+        "react-query": "^3.35.0",
         "react-router-dom": "^6.3.0"
     }
 }
