--- a/server/order-server/tsconfig.json
+++ b/server/order-server/tsconfig.json
@@ -8,6 +8,6 @@
     "files": [
       "./api/restServer.ts",
       "./business-logic/cart.ts",
-      "./database/databaseAdapter.ts"
+      "database/databaseAdapter.ts"
     ]
 }
