--- a/server/core/gateway/nginx.conf
+++ b/server/core/gateway/nginx.conf
@@ -48,9 +48,9 @@ http {
             proxy_pass http://product-server/;  
         }
 
-        #location /cart-api/ {
-        #    proxy_pass http://cart-api/;  
-        #}
+        location /cart/ {
+            proxy_pass http://order-server/;  
+        }
 
         #error_page  404              /404.html;
 
