order client api unit test

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -12,7 +12,8 @@
         "core/router/router.tsx",
         "core/ui-shell/shell.tsx",
         "product-client/api/restClient.ts",
-        "product-client/ui/component.tsx"
+        "product-client/ui/component.tsx",
+        "order-client/api/restClient.ts"
     ]
 }
   
