--- a/server/order-server/package.json
+++ b/server/order-server/package.json
@@ -2,6 +2,7 @@
     "name": "order-service-server",
     "version": "1.0.0",
     "dependencies": {
+        "cookie-parser": "^1.4.6",
         "express": "^4.17.2",
         "mongodb": "^4.5.0"
     },
