--- a/server/order-server/package.json
+++ b/server/order-server/package.json
@@ -7,6 +7,7 @@
         "mongodb": "^4.5.0"
     },
     "devDependencies": {
+        "@types/cookie-parser": "^1.4.3",
         "@types/express": "^4.17.13",
         "@types/node": "^17.0.21",
         "typescript": "^4.6.2"
